# projet-c

./: fonction.c  fonction.h  main.c  prog  utilisateur.txt
ajaf (copy)/: Makefile  Makefile.am  Makefile.in  ajaf.glade  ajaf.gladep  config.h  config.status  configure  configure.in
ajaf (copy)/autom4te.cache/: output.1  requests  traces.0  traces.1
ajaf (copy)/po/: Makefile  Makefile.in
ajaf (copy)/src/: Makefile  Makefile.am  Makefile.in  ajaf  callbacks.c  callbacks.h  ele.c  ele.h  interface.c  interface.c.bak  interface.h.bak  main.c  user.txt
ajaf (copy)/src/.deps/: callbacks.Po  ele.Po
